[gd_scene load_steps=4 format=3 uid="uid://hd4a3bbqhfye"]

[ext_resource type="Script" path="res://main.gd" id="1_4xhu1"]
[ext_resource type="Texture2D" uid="uid://c2xybvn514dq6" path="res://Assets/WriteButton.png" id="2_fp7l5"]
[ext_resource type="Texture2D" uid="uid://d2ev7cfqicncr" path="res://Assets/Crystal.png" id="3_rfu0o"]

[node name="Main" type="Node2D"]
script = ExtResource("1_4xhu1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CenterContainer"]
custom_minimum_size = Vector2(720, 1280)
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 640

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="TaskInput" type="TextEdit" parent="CanvasLayer/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "e.g. do search assignment"

[node name="TaskList" type="RichTextLabel" parent="CanvasLayer/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TaskPanelVbox" type="VBoxContainer" parent="CanvasLayer/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("2_fp7l5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(376, 879)
texture = ExtResource("3_rfu0o")

[connection signal="pressed" from="CanvasLayer/CenterContainer/MarginContainer/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
